# src/models/externalSchema.ts
@@ -109,9 +109,9 @@ export const getServiceDetailsSchema = {
 	required: ['query']
 };
 
-export const refreshSNSMessages = {
+export const getAllActiveAndScheduledServices = {
 	$schema: definedSchema,
-	$id: 'https://cardinal-domain.com/schemas/program-config/refreshSNSMessages.json',
+	$id: 'https://cardinal-domain.com/schemas/program-config/getAllActiveAndScheduledServices.json',
 	title: 'Request Parameters to refresh all SNS messages for given ack system - for external teams',
 	description: 'This is a schema to refresh all SNS messages for given ack system - for external teams.',
 	type: 'object',
