# src/routes/external/services-external-router.ts
@@ -4,7 +4,7 @@ import { validateRequest } from '../../middleware';
 import ExternalServiceManager from '../../managers/externalServiceManager';
 import db from '../../../database/DBManager';
 import { getKeycloak } from '../../../config/keycloak-config';
-import { updateModuleConfig, getServiceAttributesSchema, getServiceDetailsSchema, refreshSNSMessages } from '../../models/externalSchema';
+import { updateModuleConfig, getServiceAttributesSchema, getServiceDetailsSchema, getAllActiveAndScheduledServices } from '../../models/externalSchema';
 import { Service } from '../../../database/models/Service';
 import { ServiceModuleConfig } from '../../../database/models/ServiceModuleConfig';
 import SNSServiceManager from '../../managers/SNSServiceManager';
@@ -14,7 +14,7 @@ const externalController = new ExternalServiceController(new ExternalServiceMana
 	SERVICE_API_CREATE = process.env.SERVICE_CREATE_ROLE;
 export const ServicesExternalRouter = Router({ mergeParams: true });
 
-ServicesExternalRouter.route('/refreshSNSMessages').get(validateRequest(refreshSNSMessages), externalController.refreshSNSMessages.bind(externalController));
+ServicesExternalRouter.route('/getAllActiveAndScheduledServices').get(validateRequest(getAllActiveAndScheduledServices), externalController.getAllActiveAndScheduledServices.bind(externalController));
 
 ServicesExternalRouter.route('/:serviceID/module/:moduleID').post(
 	keycloak.protect(SERVICE_API_CREATE),
